--- a/frontend/src/app/modules/admin/admin-nav/admin-nav.component.html
+++ b/frontend/src/app/modules/admin/admin-nav/admin-nav.component.html
@@ -1,10 +1,11 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div *ngIf="isHomeView()" class="corner-ribbon top-left sticky shadow">BETA VERSION</div>
       <a
         class="navbar-brand"
         style="font-family: 'Roboto mono', monospace;"
         href=""
-        >VendeTuProducto.com</a
+        >Charlie.</a
       >
       <button
         class="navbar-toggler"
@@ -33,7 +34,8 @@
             >
           </li>
         </ul>
-
+        
       </div>
     </nav>
   </header>
+  
