--- a/frontend/src/app/modules/admin/producto-status-update/producto-status-update.component.html
+++ b/frontend/src/app/modules/admin/producto-status-update/producto-status-update.component.html
@@ -5,17 +5,21 @@
         <h1 class="display-4 mb-4">Product Status Update</h1>
         <div class="row">
           <div class="col">
-            <button class="btn btn-block btn-success" type="button">
+            <button class="btn btn-block btn-success" type="button" >
               Recibido
             </button>
           </div>
           <div class="col">
-            <button class="btn btn-block btn-success" type="button">
+            <button class="btn btn-block btn-success" type="button" >
               Checado
             </button>
           </div>
           <div class="col">
-            <button class="btn btn-block btn-outline-success" type="button">
+            <button
+              class="btn btn-block btn-outline-success"
+              type="button"
+
+            >
               Validado
             </button>
           </div>
@@ -24,6 +28,7 @@
               class="btn btn-block btn-outline-success"
               type="button"
               routerLink="../status-de-envio"
+
             >
               Enviar
             </button>
@@ -32,10 +37,10 @@
         <div class="row">
           <div class="col">
             <ol class="progtrckr" data-progtrckr-steps="4">
-              <li class="progtrckr-done">Recibido</li>
-              <li class="progtrckr-done">Checando</li>
-              <li class="progtrckr-todo">Validado</li>
-              <li class="progtrckr-todo">Enviado</li>
+              <li class="progtrckr-done" >Recibido</li>
+              <li class="progtrckr-done" >Checando</li>
+              <li class="progtrckr-todo" >Validado</li>
+              <li class="progtrckr-todo" >Enviado</li>
             </ol>
           </div>
         </div>
