--- a/frontend/src/app/modules/comprador/comprar/comprar.component.html
+++ b/frontend/src/app/modules/comprador/comprar/comprar.component.html
@@ -1,127 +1,246 @@
-      <body>
-        <app-nav-bar></app-nav-bar>
-          <div class="container pt-5">
-            <div class="row justify-content-center pt-5">
-                <div class="col-md-12 col-lg-7 col-sm-12">
-                    <h1 class="display-4 text-white">Comprar </h1>
+<body>
+  <app-nav-bar></app-nav-bar>
+  <div class="container pt-5">
+    <div class="row justify-content-center pt-5">
+      <div class="col-md-12 col-lg-7 col-sm-12">
+        <h1 class="display-4 text-white" >Comprar</h1>
+      </div>
+    </div>
+    <div class="row justify-content-center pt-3 pb-5">
+      <div class="col-lg-40 col-md-60 col-sm-100">
+        <div class="card">
+          <div class="card-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4 order-md-2 mb-4">
+                  <ul class="list-group mb-3">
+                    <li class="list-group-item d-flex justify-content-between">
+                      <span>Total (USD)</span>
+                      <strong>$20</strong>
+                    </li>
+                  </ul>
                 </div>
-            </div>
-            <div class="row justify-content-center pt-3 pb-5">
-                <div class="col-lg-40 col-md-60 col-sm-100">
-
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-4 order-md-2 mb-4">
-                                    <ul class="list-group mb-3">
-                                        <li class="list-group-item d-flex justify-content-between">
-                                        <span>Total (USD)</span>
-                                        <strong>$20</strong>
-                                        </li>
-                                    </ul>
-                                    </div>
-                                    <div class="col-md-8 order-md-1">
-                                    <h4 class="mb-3">Dirección de envío</h4>
-                                    <form action="./home.html">
-                                        <div class="row">
-                                        <div class="col-md-6 mb-3">
-                                            <label for="firstName">Nombre</label>
-                                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                                        </div>
-                                        <div class="col-md-6 mb-3">
-                                            <label for="lastName">Apellido</label>
-                                            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                                        </div>
-                                        </div>
-                                        <div class="mb-3">
-                                        <label for="address">Dirección</label>
-                                        <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-                                        </div>
-
-                                        <div class="mb-3">
-                                        <label for="address2">Dirección 2 <span class="text-muted">(Opcional)</span></label>
-                                        <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                                        </div>
-
-                                        <div class="row">
-                                        <div class="col-md-5 mb-3">
-                                            <label for="country">País</label>
-                                            <select class="custom-select d-block w-100" id="country" required>
-                                            <option value="">Escoja...</option>
-                                            <option>México</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-md-4 mb-3">
-                                            <label for="state">Estado</label>
-                                            <select class="custom-select d-block w-100" id="state" required>
-                                            <option value="">Escoja...</option>
-                                            <option>CDMX</option>
-                                            <option>Estado de México</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-md-3 mb-3">
-                                            <label for="zip">CP</label>
-                                            <input type="text" class="form-control" id="zip" placeholder="" required>
-                                        </div>
-                                        </div>
-                                        <hr class="mb-4">
-                                        <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="same-address">
-                                        <label class="custom-control-label" for="same-address">Dirección de envío es la misma que mi dirección de pago</label>
-                                        </div>
-                                        <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="save-info">
-                                        <label class="custom-control-label" for="save-info">Guardar esta información para después</label>
-                                        </div>
-                                        <hr class="mb-4">
-
-                                        <h4 class="mb-3">Forma de pago</h4>
-                                        <div class="d-block my-3">
-                                        <div class="custom-control custom-radio">
-                                            <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required>
-                                            <label class="custom-control-label" for="credit">Tarjeta de crédito</label>
-                                        </div>
-                                        <div class="custom-control custom-radio">
-                                            <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                                            <label class="custom-control-label" for="debit">Tarjeta de débito</label>
-                                        </div>
-                                        <div class="custom-control custom-radio">
-                                            <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                                            <label class="custom-control-label" for="paypal">Paypal</label>
-                                        </div>
-                                        </div>
-                                        <div class="row">
-                                        <div class="col-md-6 mb-3">
-                                            <label for="cc-name">Nombre en tarjeta</label>
-                                            <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                                            <small class="text-muted">Nombre completo como aparece en tarjeta</small>
-                                        </div>
-                                        <div class="col-md-6 mb-3">
-                                            <label for="cc-number">Número de tarjeta</label>
-                                            <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                                        </div>
-                                        </div>
-                                        <div class="row">
-                                        <div class="col-md-3 mb-3">
-                                            <label for="cc-expiration">Expiración</label>
-                                            <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                                        </div>
-                                        <div class="col-md-3 mb-3">
-                                            <label for="cc-expiration">CVV</label>
-                                            <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                                        </div>
-                                        </div>
-                                        <hr class="mb-4">
-                                        <button class="btn btn-primary btn-lg btn-block" type="submit">Comprar</button>
-                                    </form>
-                                    </div>
-                                </div>
-                                </div>
-                        </div>
+                <div class="col-md-8 order-md-1">
+                  <h4 class="mb-3" >Dirección de envío</h4>
+                  <form action="" (submit)="onSubmit()" ngNativeValidate>
+                    <div class="row">
+                      <div class="col-md-6 mb-3">
+                        <label for="firstName" >Nombre</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="firstName"
+                          placeholder=""
+                          value=""
+                          required
+                        />
                       </div>
+                      <div class="col-md-6 mb-3">
+                        <label for="lastName" >Apellido</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="lastName"
+                          placeholder=""
+                          value=""
+                          required
+                        />
+                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="address" >Dirección</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="address"
+                        placeholder="1234 Main St"
+                        required
+                      />
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="address2"
+                        >Dirección 2
+                        <span class="text-muted">(Opcional)</span></label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="address2"
+                        placeholder="Apartment or suite"
+                      />
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-5 mb-3">
+                        <label for="country" >País</label>
+                        <select
+                          class="custom-select d-block w-100"
+                          id="country"
+                          required
+                        >
+                          <option value="" >Escoja...</option>
+                          <option>México</option>
+                        </select>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <label for="state" >Estado</label>
+                        <select
+                          class="custom-select d-block w-100"
+                          id="state"
+                          required
+                        >
+                          <option value="" >Escoja...</option>
+                          <option>CDMX</option>
+                          <option>Estado de México</option>
+                        </select>
+                      </div>
+                      <div class="col-md-3 mb-3">
+                        <label for="zip" >CP</label>
+                        <input
+                          type="text"
+                          pattern="[0-9]{5}"
+                          class="form-control"
+                          id="zip"
+                          placeholder="12345"
+                          title="CP de 5 digitos"
+                          required
+                        />
+                      </div>
+                    </div>
+                    <hr class="mb-4" />
+                    <div class="custom-control custom-checkbox">
+                      <input
+                        type="checkbox"
+                        class="custom-control-input"
+                        id="same-address"
+                      />
+                      <label
+                        class="custom-control-label"
+                        for="same-address"
+
+                        >Dirección de envío es la misma que mi dirección de
+                        pago</label
+                      >
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                      <input
+                        type="checkbox"
+                        class="custom-control-input"
+                        id="save-info"
+                      />
+                      <label class="custom-control-label" for="save-info"
+                        >Guardar esta información para después</label
+                      >
+                    </div>
+                    <hr class="mb-4" />
+
+                    <h4 class="mb-3" >Forma de pago</h4>
+                    <div class="d-block my-3">
+                      <div class="custom-control custom-radio">
+                        <input
+                          id="credit"
+                          name="paymentMethod"
+                          type="radio"
+                          class="custom-control-input"
+                          checked=""
+                          required
+                        />
+                        <label class="custom-control-label" for="credit"
+                          >Tarjeta de crédito</label
+                        >
+                      </div>
+                      <div class="custom-control custom-radio">
+                        <input
+                          id="debit"
+                          name="paymentMethod"
+                          type="radio"
+                          class="custom-control-input"
+                          required
+                        />
+                        <label class="custom-control-label" for="debit"
+                          >Tarjeta de débito</label
+                        >
+                      </div>
+                      <div class="custom-control custom-radio">
+                        <input
+                          id="paypal"
+                          name="paymentMethod"
+                          type="radio"
+                          class="custom-control-input"
+                          required
+                        />
+                        <label class="custom-control-label" for="paypal"
+                          >Paypal</label
+                        >
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6 mb-3">
+                        <label for="cc-name" >Nombre en tarjeta</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="cc-name"
+                          placeholder=""
+                          required
+                        />
+                        <small class="text-muted"
+                          >Nombre completo como aparece en tarjeta</small
+                        >
+                      </div>
+                      <div class="col-md-6 mb-3">
+                        <label for="cc-number" >Número de tarjeta</label>
+                        <input
+                          type="text"
+                          pattern="[0-9]{13,16}"
+                          class="form-control"
+                          id="cc-number"
+                          placeholder=""
+                          required
+                        />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-3 mb-3">
+                        <label for="cc-expiration" >Expiración</label>
+                        <input
+                          type="text"
+                          pattern="(?:0[1-9]|1[0-2])/[0-9]{2}"
+                          class="form-control"
+                          id="cc-expiration"
+                          placeholder="mm/yy"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-3 mb-3">
+                        <label for="cc-expiration">CVV</label>
+                        <input
+                          type="text"
+                          pattern="\d{3,4}"
+                          class="form-control"
+                          id="cc-cvv"
+                          placeholder=""
+                          required
+                        />
+                      </div>
+                    </div>
+                    <hr class="mb-4" />
+                    <button
+                      class="btn btn-primary btn-lg btn-block"
+                      type="submit"
+
+                    >
+                      Comprar
+                    </button>
+                  </form>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-        <app-footer></app-footer>
-      </body>
+      </div>
+    </div>
+  </div>
+  <app-footer></app-footer>
+</body>
