--- a/frontend/src/app/modules/comprador/home/home.component.html
+++ b/frontend/src/app/modules/comprador/home/home.component.html
@@ -3,25 +3,21 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10 p-4">
-      <h1 class="display-3">Productos</h1>
+      <h1 class="display-3" >Productos</h1>
       <hr class="my-4" />
     </div>
   </div>
 
   <div class="row justify-content-md-center">
     <div class="col col-lg-4" *ngFor="let product of products">
-      <div class="card" >
-        <img
-          src="{{product.url}}"
-          class="card-img-top"
-          alt="..."
-        />
+      <div class="card">
+        <img src="{{ product.url }}" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title">{{product.name}}</h5>
+          <h5 class="card-title">{{ product.name }}</h5>
           <p class="card-text">
-            {{product.description}}
+            {{ product.description }}
           </p>
-          <p class="card-text">${{product.price}}.00.</p>
+          <p class="card-text">${{ product.price }}.00.</p>
           <p class="card-text">
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
@@ -29,6 +25,7 @@
             type="button"
             class="btn btn-outline-success btn-block"
             routerLink="/comprar"
+
           >
             Comprar
           </button>
@@ -37,23 +34,23 @@
     </div>
   </div>
 
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center pb-3">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item active"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
 
-
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center pb-3">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-    </li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-    </li>
-  </ul>
-</nav>
 <app-footer></app-footer>
