--- a/frontend/src/app/modules/shared/log-in/log-in.component.html
+++ b/frontend/src/app/modules/shared/log-in/log-in.component.html
@@ -1,35 +1,50 @@
-        <body>
-        <app-nav-bar></app-nav-bar>
-          <div class="container pt-5">
-            <div class="row justify-content-center pt-5">
-                <div class="col-md-12 col-lg-7 col-sm-12">
-                    <h1 class="display-4 text-white text-center">Inicia Sesión</h1>
-                </div>
-            </div>
-            <div class="row justify-content-center pt-3 pb-5">
-                <div class="col-lg-4 col-md-6 col-sm-10">
-                    <div class="card">
-                        <div class="card-body">
-                            <form action="./home.html">
-                                <div class="form-group">
-                                  <label for="exampleInputEmail1">Email:</label>
-                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com" required>
-                                  <small id="emailHelp" class="form-text text-muted">Correo electrónico válido.</small>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">Password:</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1" required>
-                                  </div>
-                                <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
-                              </form>
-                              <br>
-                              ¿No tienes una cuenta? <a href="../crear-cuenta">Regístrate</a>
-
-                        </div>
-                      </div>
-                </div>
-            </div>
+<body>
+  <app-nav-bar></app-nav-bar>
+  <div class="container pt-5">
+    <div class="row justify-content-center pt-5">
+      <div class="col-md-12 col-lg-7 col-sm-12">
+        <h1 class="display-4 text-white text-center" >Inicia Sesión</h1>
+      </div>
+    </div>
+    <div class="row justify-content-center pt-3 pb-5">
+      <div class="col-lg-4 col-md-6 col-sm-10">
+        <div class="card">
+          <div class="card-body">
+            <form (submit)="onSubmit()" ngNativeValidate>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email:</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  placeholder="name@example.com"
+                  required
+                />
+                <small id="emailHelp" class="form-text text-muted"
+                  >Correo electrónico válido.</small
+                >
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Password:</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="exampleInputPassword1"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-primary btn-block" >
+                Iniciar sesión
+              </button>
+            </form>
+            <br />
+            <p >¿No tienes una cuenta?</p>
+            <a href="../crear-cuenta" >Regístrate</a>
+          </div>
         </div>
-        <app-footer></app-footer>
-
-      </body>
+      </div>
+    </div>
+  </div>
+  <app-footer></app-footer>
+</body>
