--- a/frontend/src/app/modules/admin/admin-nav/admin-nav.component.html
+++ b/frontend/src/app/modules/admin/admin-nav/admin-nav.component.html
@@ -1,11 +1,10 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div *ngIf="isHomeView()" class="corner-ribbon top-left sticky shadow">BETA VERSION</div>
       <a
         class="navbar-brand"
         style="font-family: 'Roboto mono', monospace;"
         href=""
-        >Charlie.</a
+        >VendeTuProducto.com</a
       >
       <button
         class="navbar-toggler"
@@ -34,8 +33,7 @@
             >
           </li>
         </ul>
-        
+
       </div>
     </nav>
   </header>
-  
