--- a/frontend/src/app/modules/comprador/home/home.component.html
+++ b/frontend/src/app/modules/comprador/home/home.component.html
@@ -9,9 +9,9 @@
   </div>
 
   <div class="row justify-content-md-center">
-    <div class="col col-lg-4" *ngFor="let product of products">
+    <div class="col col-lg-4" *ngFor="let product of allProducts; let i = index">
       <div class="card">
-        <img src="{{ product.url }}" class="card-img-top" alt="..." />
+        <img src="{{ product.url }}" style="width: auto; height:200px" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">{{ product.name }}</h5>
           <p class="card-text">
