--- a/frontend/src/app/main-components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/main-components/nav-bar/nav-bar.component.html
@@ -56,7 +56,16 @@
             >Log in</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLink="/carrito"
+            [routerLinkActive]="'active'"
+            ><mdb-icon fas icon="shopping-cart" align="center" ></mdb-icon></a
+          >
+        </li>
       </ul>
+      
       <form class="form-inline my-2 my-lg-0">
         <input
           class="form-control mr-sm-2"
